reformatted layout events on right side, removed description. fixed issue with description not showing in event bubble

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -42,6 +42,11 @@ h1 {
   color: #00fde2;
 }
 
+.events-header {
+  font-size: 48px;
+  color: red;
+}
+
 .eventList {
   color: #00fde2;
 }
@@ -56,8 +61,7 @@ h1 {
 }
 
 #map {
-  height: 600px;
-  width: 80%;
-  margin: 15px 10% 0 10%;
+  height: 800px;
+  margin: 15px 0 0 0;
 }
 
